--- a/4-application/app/src/main/res/values/colors.xml
+++ b/4-application/app/src/main/res/values/colors.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="almost_black">#081C15</color>
+    <color name="dark_green">#1B4332</color>
+    <color name="amazon_green">#2D6A4F</color>
+    <color name="aquamarine">#40916C</color>
+    <color name="ocean_green">#52B788</color>
+    <color name="mint">#B7E4C7</color>
+    <color name="chinese_white">#D8F3DC</color>
+    <color name="yellow">#FFD166</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
