--- a/4-application/app/src/main/res/values/colors.xml
+++ b/4-application/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="mint">#B7E4C7</color>
     <color name="chinese_white">#D8F3DC</color>
     <color name="yellow">#FFD166</color>
+    <color name="transparent">#00FFFFFF</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
