--- a/4-application/app/src/main/res/values-night/themes.xml
+++ b/4-application/app/src/main/res/values-night/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/ocean_green</item>
         <item name="colorOnSecondary">@color/yellow</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorOnPrimary</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/comfortaa</item>
     </style>
