--- a/4-application/app/src/main/res/drawable/listview_corners.xml
+++ b/4-application/app/src/main/res/drawable/listview_corners.xml
@@ -5,7 +5,7 @@
 
     <corners android:radius="@dimen/list_view_radius" />
 
-<!--    <padding android:bottom="@dimen/list_view_padding" android:left="@dimen/list_view_padding" android:right="@dimen/list_view_padding" android:top="@dimen/list_view_padding" />-->
+    <padding android:bottom="@dimen/list_view_padding" android:left="@dimen/list_view_padding" android:right="@dimen/list_view_padding" android:top="@dimen/list_view_padding" />
 
     <stroke android:width="@dimen/list_view_stroke_width" android:color="@color/mint" />
 </shape>
