--- a/4-application/app/src/main/res/layout/fragment_prayer_times.xml
+++ b/4-application/app/src/main/res/layout/fragment_prayer_times.xml
@@ -48,6 +48,8 @@
         android:id="@+id/prayer_times_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:dividerHeight="@dimen/lv_divider_height"
+        android:divider="@color/transparent"
         android:layout_marginStart="@dimen/list_view_margin_edge"
         android:layout_marginTop="@dimen/margin_top"
         android:layout_marginEnd="@dimen/list_view_margin_edge"
