--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -5,7 +5,10 @@
     <dimen name="margin_top">40dp</dimen>
     <dimen name="current_prayer_txt_size">40sp</dimen>
     <dimen name="list_view_margin_edge">20dp</dimen>
-    <dimen name="list_view_radius">15dp</dimen>
-    <dimen name="list_view_stroke_width">3dp</dimen>
-    <dimen name="list_view_padding">5dp</dimen>
+    <dimen name="list_view_radius">20dp</dimen>
+    <dimen name="list_view_stroke_width">1dp</dimen>
+    <dimen name="list_view_padding">13dp</dimen>
+    <dimen name="lv_items_margin">3dp</dimen>
+    <dimen name="lv_items_text_size">20sp</dimen>
+    <dimen name="lv_divider_height">20dp</dimen>
 </resources>
