Modified handleResponse() method to get the location and date, and set the TextView to those values. Added some comments to PrayerTimeFragment. Modified some dimensions

--- a/4-application/app/src/main/res/layout/fragment_prayer_times.xml
+++ b/4-application/app/src/main/res/layout/fragment_prayer_times.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/location_text_margin_top"
         android:background="@color/transparent"
-        android:text="Cardiff, United Kingdom"
         android:textColor="@color/chinese_white"
         android:textSize="@dimen/txt_size"
         app:icon="@drawable/ic_search"
@@ -37,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top"
-        android:text="Saturday, 1 January"
         android:textColor="@color/chinese_white"
         android:textSize="@dimen/txt_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +49,7 @@
         android:dividerHeight="@dimen/lv_divider_height"
         android:divider="@color/transparent"
         android:layout_marginStart="@dimen/list_view_margin_edge"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginTop="@dimen/lv_margin_top"
         android:layout_marginEnd="@dimen/list_view_margin_edge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
