--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="location_text_margin_top">25dp</dimen>
-    <dimen name="txt_size">16sp</dimen>
+    <dimen name="txt_size">18sp</dimen>
     <dimen name="margin_top">40dp</dimen>
+    <dimen name="lv_margin_top">20dp</dimen>
     <dimen name="current_prayer_txt_size">40sp</dimen>
     <dimen name="list_view_margin_edge">20dp</dimen>
     <dimen name="list_view_radius">20dp</dimen>
