Created a menu layout to populate bottom navigation View in main activity

--- a/4-application/app/src/main/res/layout/activity_main.xml
+++ b/4-application/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,17 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_frag_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/almost_black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
