--- a/4-application/app/src/main/res/layout/fragment_qibla.xml
+++ b/4-application/app/src/main/res/layout/fragment_qibla.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrackerFragment">
+    tools:context=".QiblaFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_fragment_tracker"
+        android:text="@string/hello_fragment_qibla"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
