--- a/4-application/app/src/main/res/layout/activity_maps.xml
+++ b/4-application/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +7,22 @@
     tools:context=".MapsActivity" >
 
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <SearchView
-        android:layout_width="300dp"
+        android:id="@+id/sv_location"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:queryHint="Search your city..."
-        android:id="@+id/sv_location"
+        android:layout_marginTop="@dimen/sv_marginTop"
+        android:background="@drawable/search_background"
         android:iconifiedByDefault="false"
-        android:background="@drawable/search_background" />
-</RelativeLayout>
+        android:queryHint="@string/sv_hint"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintHorizontal_bias="0.495"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
