--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="lv_items_margin">3dp</dimen>
     <dimen name="lv_items_text_size">20sp</dimen>
     <dimen name="lv_divider_height">20dp</dimen>
+    <dimen name="sv_marginTop">80dp</dimen>
 </resources>
