--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -13,5 +13,7 @@
     <dimen name="lv_items_text_size">20sp</dimen>
     <dimen name="lv_divider_height">20dp</dimen>
     <dimen name="sv_marginTop">80dp</dimen>
+    <dimen name="sv_radius_corners">15dp</dimen>
     <dimen name="error_tv_marginTop">10dp</dimen>
+    <dimen name="back_btn_margin">12dp</dimen>
 </resources>
