Created 'get current location' button to request for users location. Made a dialog using AlertDialog to display if location permissions are not granted, which informss user to change location permissions in app settings to use this feature.

--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="sv_radius_corners">15dp</dimen>
     <dimen name="error_tv_marginTop">10dp</dimen>
     <dimen name="back_btn_margin">12dp</dimen>
+    <dimen name="current_location_margin">20dp</dimen>
 </resources>
