Added some comments. Added icons to some buttons on map activity layout, as well as changing search icon colour on prayer fragment

--- a/4-application/app/src/main/res/layout/fragment_prayer_times.xml
+++ b/4-application/app/src/main/res/layout/fragment_prayer_times.xml
@@ -14,7 +14,7 @@
         android:background="@color/transparent"
         android:textColor="@color/chinese_white"
         android:textSize="@dimen/txt_size"
-        app:icon="@drawable/ic_search"
+        android:drawableLeft="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
