--- a/4-application/app/src/main/res/layout/activity_maps.xml
+++ b/4-application/app/src/main/res/layout/activity_maps.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +20,9 @@
         android:layout_marginTop="@dimen/back_btn_margin"
         android:background="@drawable/back_btn_corners"
         android:text="@string/back_tv"
+        android:textColor="@color/chinese_white"
         android:textAllCaps="false"
+        android:drawableLeft="@drawable/ic_arrow_back"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent" />
 
@@ -59,7 +60,7 @@
         android:text="@string/current_location_txt"
         android:textAllCaps="false"
         android:textColor="@color/almost_black"
-        app:icon="@drawable/ic_gps"
+        android:drawableLeft="@drawable/ic_gps"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent" />
