Changed error textview sizes

--- a/4-application/app/src/main/res/layout/fragment_error.xml
+++ b/4-application/app/src/main/res/layout/fragment_error.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="@dimen/margin_top"
         android:text="Error Title"
         android:textAlignment="center"
-        android:textSize="@dimen/txt_size"
+        android:textSize="@dimen/error_title_size"
         android:textColor="@color/yellow"
         app:layout_constraintBottom_toTopOf="@+id/error_message"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Error Message"
+        android:textSize="@dimen/txt_size"
         android:textColor="@color/chinese_white"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
