Created a setter for tracker date. OnDateChangeListener, set the tracker date to the date selected on the calendar

--- a/4-application/app/src/main/res/layout/fragment_tracker.xml
+++ b/4-application/app/src/main/res/layout/fragment_tracker.xml
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/tracker_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Saturday 1 January 2022"
@@ -42,7 +42,7 @@
             android:background="@drawable/listview_corners"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date" />
+            app:layout_constraintTop_toBottomOf="@+id/tracker_date" />
 
         <CheckBox
             android:id="@+id/dhuhr_checkbox"
