Create 2 new packages and moved activites and fragments into its own packages

--- a/4-application/app/src/main/res/layout/fragment_prayer_times.xml
+++ b/4-application/app/src/main/res/layout/fragment_prayer_times.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PrayerTimesFragment">
+    tools:context=".fragments.PrayerTimesFragment">
 
     <Button
         android:id="@+id/prayer_location_btn"
