--- a/4-application/app/src/main/res/layout/fragment_dua.xml
+++ b/4-application/app/src/main/res/layout/fragment_dua.xml
@@ -7,12 +7,28 @@
     tools:context=".fragments.DuaFragment">
 
     <TextView
+        android:id="@+id/dua_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_fragment_dua"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/margin_top"
+        android:text="@string/dua_nav_title"
+        android:textSize="@dimen/current_prayer_txt_size"
+        android:textColor="@color/yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/dua_lv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:dividerHeight="@dimen/lv_divider_height"
+        android:divider="@color/transparent"
+        android:layout_marginStart="@dimen/list_view_margin_edge"
+        android:layout_marginTop="@dimen/lv_margin_top"
+        android:layout_marginEnd="@dimen/list_view_margin_edge"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dua_title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
