--- a/4-application/app/src/main/res/layout/fragment_dua.xml
+++ b/4-application/app/src/main/res/layout/fragment_dua.xml
@@ -7,7 +7,7 @@
     tools:context=".fragments.DuaFragment">
 
     <TextView
-        android:id="@+id/dua_title"
+        android:id="@+id/dua_fragment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top"
@@ -25,10 +25,10 @@
         android:dividerHeight="@dimen/lv_divider_height"
         android:divider="@color/transparent"
         android:layout_marginStart="@dimen/list_view_margin_edge"
-        android:layout_marginTop="@dimen/lv_margin_top"
+        android:layout_marginTop="@dimen/margin_top"
         android:layout_marginEnd="@dimen/list_view_margin_edge"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dua_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/dua_fragment_title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
