Adding a height to the listviews so you can scroll through the items

--- a/4-application/app/src/main/res/layout/fragment_prayer_times.xml
+++ b/4-application/app/src/main/res/layout/fragment_prayer_times.xml
@@ -39,17 +39,20 @@
         android:textSize="@dimen/txt_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/current_prayer_text" />
+        app:layout_constraintTop_toBottomOf="@+id/current_prayer_text"
+        app:layout_constraintBottom_toTopOf="@+id/prayer_times_list_view"/>
 
     <ListView
         android:id="@+id/prayer_times_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:dividerHeight="@dimen/lv_divider_height"
-        android:divider="@color/transparent"
+        android:layout_height="@dimen/prayer_times_lv_height"
         android:layout_marginStart="@dimen/list_view_margin_edge"
         android:layout_marginTop="@dimen/lv_margin_top"
         android:layout_marginEnd="@dimen/list_view_margin_edge"
+        android:layout_marginBottom="@dimen/lv_margin_bottom"
+        android:divider="@color/transparent"
+        android:dividerHeight="@dimen/lv_divider_height"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/current_date_text" />
