--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="back_btn_margin">12dp</dimen>
     <dimen name="current_location_margin">20dp</dimen>
     <dimen name="error_title_size">24sp</dimen>
+    <dimen name="prayer_times_lv_height">450dp</dimen>
+    <dimen name="dua_lv_height">550dp</dimen>
+    <dimen name="lv_margin_bottom">50dp</dimen>
 </resources>
