Added a back button to dua detail page. Retrieving Dua data from bundles and setting the TextViews from fragment layout to data fetched

--- a/4-application/app/src/main/res/layout/fragment_dua_detail.xml
+++ b/4-application/app/src/main/res/layout/fragment_dua_detail.xml
@@ -10,6 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/dua_back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dua_detail_tv_margin_top"
+            android:layout_marginTop="@dimen/dua_detail_tv_margin_top"
+            android:background="@drawable/back_btn_corners"
+            android:drawableLeft="@drawable/ic_arrow_back"
+            android:text="@string/back_tv"
+            android:textAllCaps="false"
+            android:textColor="@color/chinese_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/dua_title"
             android:layout_width="wrap_content"
@@ -21,7 +35,7 @@
             android:textSize="@dimen/current_prayer_txt_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/dua_back_btn" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/arabic_constraint"
@@ -101,9 +115,11 @@
             android:id="@+id/meaning_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/dua_item_margin_top"
             android:layout_marginStart="@dimen/list_view_margin_edge"
+            android:layout_marginTop="@dimen/dua_item_margin_top"
             android:layout_marginEnd="@dimen/list_view_margin_edge"
+            android:layout_marginBottom="@dimen/margin_top"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/transliteration_constraint">
