--- a/4-application/app/src/main/res/layout/fragment_dua.xml
+++ b/4-application/app/src/main/res/layout/fragment_dua.xml
@@ -18,6 +18,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <SearchView
+        android:id="@+id/dua_title_sv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/list_view_margin_edge"
+        android:layout_marginBottom="@dimen/list_view_margin_edge"
+        android:background="@drawable/search_background"
+        android:iconifiedByDefault="false"
+        android:queryHint="@string/sv_dua_hint"
+        app:layout_constraintBottom_toTopOf="@+id/dua_lv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dua_fragment_title" />
+
     <ListView
         android:id="@+id/dua_lv"
         android:layout_width="match_parent"
@@ -31,6 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dua_fragment_title" />
+        app:layout_constraintTop_toBottomOf="@+id/dua_title_sv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
