Created a layout with a ProgressBar widget. Created another fragment with FragmentContainerView to display the loading page while API data is being fetched. Once API data has been retrieved, display the DuaFragment and populate the ListView.

--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="dua_detail_tv_margin_top">10dp</dimen>
     <dimen name="dua_item_text_size">24sp</dimen>
     <dimen name="dua_item_margin_top">60dp</dimen>
+    <dimen name="loading_size">200dp</dimen>
 </resources>
