--- a/4-application/app/src/main/res/layout/fragment_prayer_times.xml
+++ b/4-application/app/src/main/res/layout/fragment_prayer_times.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+    android:padding="@dimen/pf_constraint_padding"
     tools:context=".fragments.PrayerTimesFragment">
 
     <Button
@@ -23,9 +23,9 @@
         android:id="@+id/current_prayer_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginTop="@dimen/pf_margin_top"
         android:textColor="@color/yellow"
-        android:textSize="@dimen/current_prayer_txt_size"
+        android:textSize="@dimen/pf_current_prayer_txt_size"
         app:layout_constraintBottom_toTopOf="@+id/current_date_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/current_date_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginTop="@dimen/pf_margin_top"
         android:textColor="@color/chinese_white"
         android:textSize="@dimen/txt_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,11 +46,11 @@
     <ListView
         android:id="@+id/prayer_times_list_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/prayer_times_lv_height"
-        android:layout_marginTop="@dimen/lv_margin_top"
-        android:layout_marginBottom="@dimen/lv_margin_bottom"
+        android:layout_height="@dimen/pf_lv_height"
+        android:layout_marginTop="@dimen/pf_lv_margin_top"
+        android:paddingBottom="@dimen/pf_lv_margin_bottom"
         android:divider="@color/transparent"
-        android:dividerHeight="@dimen/lv_divider_height"
+        android:dividerHeight="@dimen/pf_lv_divider_height"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
