--- a/4-application/app/src/main/res/values/dimens.xml
+++ b/4-application/app/src/main/res/values/dimens.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="location_text_margin_top">25dp</dimen>
+
     <dimen name="txt_size">18sp</dimen>
-    <dimen name="margin_top">40dp</dimen>
-    <dimen name="lv_margin_top">20dp</dimen>
-    <dimen name="current_prayer_txt_size">40sp</dimen>
+
+<!--    PrayerTimes Frag Layout-->
+    <dimen name="pf_constraint_padding">20dp</dimen>
+    <dimen name="pf_margin_top">40dp</dimen>
+    <dimen name="pf_current_prayer_txt_size">40sp</dimen>
+    <dimen name="pf_lv_height">450dp</dimen>
+    <dimen name="pf_lv_margin_top">20dp</dimen>
+    <dimen name="pf_lv_margin_bottom">80dp</dimen>
+    <dimen name="pf_lv_divider_height">20dp</dimen>
+
+
+    <dimen name="location_text_margin_top">25dp</dimen>
     <dimen name="list_view_margin_edge">20dp</dimen>
     <dimen name="list_view_radius">20dp</dimen>
     <dimen name="list_view_stroke_width">1dp</dimen>
     <dimen name="list_view_padding">13dp</dimen>
     <dimen name="lv_items_margin">3dp</dimen>
     <dimen name="lv_items_text_size">20sp</dimen>
-    <dimen name="lv_divider_height">20dp</dimen>
     <dimen name="sv_marginTop">80dp</dimen>
     <dimen name="sv_radius_corners">15dp</dimen>
     <dimen name="error_tv_marginTop">10dp</dimen>
     <dimen name="back_btn_margin">12dp</dimen>
-    <dimen name="current_location_margin">20dp</dimen>
     <dimen name="error_title_size">24sp</dimen>
-    <dimen name="prayer_times_lv_height">450dp</dimen>
     <dimen name="dua_lv_height">550dp</dimen>
-    <dimen name="lv_margin_bottom">50dp</dimen>
     <dimen name="dua_detail_tv_margin_top">10dp</dimen>
     <dimen name="dua_item_text_size">24sp</dimen>
     <dimen name="dua_item_margin_top">60dp</dimen>
